# process-map-agent

./: .gitignore  README.md  pyproject.toml
docs/: unified-ci-coach-spec.md
src/ci_coach/: __init__.py  app.py  charts.py  cli.py  coaches.py  conversation.py  datasets.py  diagrams.py  json_utils.py  llm.py  prompts.py  state.py
