[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-coach"
version = "0.1.0"
description = "Unified Continuous Improvement Coach with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Process Map Agent"}
]
dependencies = [
  "langchain>=0.1.20",
  "langchain-openai>=0.1.3",
  "langgraph>=0.0.40",
  "pydantic>=2.5",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "numpy>=1.26",
  "typing-extensions>=4.10",
  "python-dotenv>=1.0",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
ci-coach = "ci_coach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
